src/grammar/LuaParser.ts
// Generated from grammar/leap/LuaParser.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import LuaParserListener from "./LuaParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class LuaParser extends Parser {
	public static readonly SEMI = 1;
	public static readonly EQ = 2;
	public static readonly NEW = 3;
	public static readonly CLASS = 4;
	public static readonly EXTENDS = 5;
	public static readonly USING = 6;
	public static readonly FILTER = 7;
	public static readonly IS = 8;
	public static readonly TRY = 9;
	public static readonly CATCH = 10;
	public static readonly THROW = 11;
	public static readonly QUESTMARK = 12;
	public static readonly COMPPLUS = 13;
	public static readonly COMPMINUS = 14;
	public static readonly COMPSTAR = 15;
	public static readonly COMPSLASH = 16;
	public static readonly COMPLL = 17;
	public static readonly COMPGG = 18;
	public static readonly COMPAMP = 19;
	public static readonly COMPPIPE = 20;
	public static readonly COMPCARET = 21;
	public static readonly DEFER = 22;
	public static readonly AT = 23;
	public static readonly BREAK = 24;
	public static readonly GOTO = 25;
	public static readonly DO = 26;
	public static readonly END = 27;
	public static readonly WHILE = 28;
	public static readonly REPEAT = 29;
	public static readonly UNTIL = 30;
	public static readonly IF = 31;
	public static readonly THEN = 32;
	public static readonly ELSEIF = 33;
	public static readonly ELSE = 34;
	public static readonly FOR = 35;
	public static readonly COMMA = 36;
	public static readonly IN = 37;
	public static readonly FUNCTION = 38;
	public static readonly LOCAL = 39;
	public static readonly LT = 40;
	public static readonly GT = 41;
	public static readonly RETURN = 42;
	public static readonly CONTINUE = 43;
	public static readonly CC = 44;
	public static readonly NIL = 45;
	public static readonly FALSE = 46;
	public static readonly TRUE = 47;
	public static readonly DOT = 48;
	public static readonly SQUIG = 49;
	public static readonly MINUS = 50;
	public static readonly POUND = 51;
	public static readonly OP = 52;
	public static readonly CP = 53;
	public static readonly NOT = 54;
	public static readonly LL = 55;
	public static readonly GG = 56;
	public static readonly AMP = 57;
	public static readonly SS = 58;
	public static readonly PER = 59;
	public static readonly COL = 60;
	public static readonly LE = 61;
	public static readonly GE = 62;
	public static readonly AND = 63;
	public static readonly OR = 64;
	public static readonly PLUS = 65;
	public static readonly STAR = 66;
	public static readonly OCU = 67;
	public static readonly CCU = 68;
	public static readonly OB = 69;
	public static readonly CB = 70;
	public static readonly EE = 71;
	public static readonly DD = 72;
	public static readonly PIPE = 73;
	public static readonly CARET = 74;
	public static readonly SLASH = 75;
	public static readonly DDD = 76;
	public static readonly SQEQ = 77;
	public static readonly NOTEQ_ALT = 78;
	public static readonly NAME = 79;
	public static readonly NORMALSTRING = 80;
	public static readonly CHARSTRING = 81;
	public static readonly JENKINSHASHSTRING = 82;
	public static readonly LONGSTRING = 83;
	public static readonly INT = 84;
	public static readonly HEX = 85;
	public static readonly FLOAT = 86;
	public static readonly HEX_FLOAT = 87;
	public static readonly COMMENT = 88;
	public static readonly C_COMMENT = 89;
	public static readonly WS = 90;
	public static readonly NL = 91;
	public static readonly SHEBANG = 92;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_start_ = 0;
	public static readonly RULE_chunk = 1;
	public static readonly RULE_block = 2;
	public static readonly RULE_stat = 3;
	public static readonly RULE_attnamelist = 4;
	public static readonly RULE_attrib = 5;
	public static readonly RULE_retstat = 6;
	public static readonly RULE_label = 7;
	public static readonly RULE_funcname = 8;
	public static readonly RULE_varlist = 9;
	public static readonly RULE_namelist = 10;
	public static readonly RULE_decorator = 11;
	public static readonly RULE_decoratorbody = 12;
	public static readonly RULE_newcall = 13;
	public static readonly RULE_explist = 14;
	public static readonly RULE_exp = 15;
	public static readonly RULE_filterfield = 16;
	public static readonly RULE_filterfieldlist = 17;
	public static readonly RULE_tablecomprehension = 18;
	public static readonly RULE_compactfunc = 19;
	public static readonly RULE_indexed_member = 20;
	public static readonly RULE_var = 21;
	public static readonly RULE_prefixexp = 22;
	public static readonly RULE_functioncall = 23;
	public static readonly RULE_compound = 24;
	public static readonly RULE_argument = 25;
	public static readonly RULE_argumentlist = 26;
	public static readonly RULE_args = 27;
	public static readonly RULE_functiondef = 28;
	public static readonly RULE_funcbody = 29;
	public static readonly RULE_class = 30;
	public static readonly RULE_isop = 31;
	public static readonly RULE_type = 32;
	public static readonly RULE_partype = 33;
	public static readonly RULE_defaultvalue = 34;
	public static readonly RULE_extendedpar = 35;
	public static readonly RULE_extendedparlist = 36;
	public static readonly RULE_parlist = 37;
	public static readonly RULE_tableconstructor = 38;
	public static readonly RULE_fieldlist = 39;
	public static readonly RULE_field = 40;
	public static readonly RULE_fieldsep = 41;
	public static readonly RULE_identifier = 42;
	public static readonly RULE_number = 43;
	public static readonly RULE_string = 44;
	public static readonly literalNames: (string | null)[] = [ null, "';'", 
                                                            "'='", "'new'", 
                                                            "'class'", "'extends'", 
                                                            "'using'", "'filter'", 
                                                            "'is'", "'try'", 
                                                            "'catch'", "'throw'", 
                                                            "'?'", "'+='", 
                                                            "'-='", "'*='", 
                                                            "'/='", "'<<='", 
                                                            "'>>='", "'&='", 
                                                            "'|='", "'^='", 
                                                            "'defer'", "'@'", 
                                                            "'break'", "'goto'", 
                                                            "'do'", "'end'", 
                                                            "'while'", "'repeat'", 
                                                            "'until'", "'if'", 
                                                            "'then'", "'elseif'", 
                                                            "'else'", "'for'", 
                                                            "','", "'in'", 
                                                            "'function'", 
                                                            "'local'", "'<'", 
                                                            "'>'", "'return'", 
                                                            "'continue'", 
                                                            "'::'", "'nil'", 
                                                            "'false'", "'true'", 
                                                            "'.'", "'~'", 
                                                            "'-'", "'#'", 
                                                            "'('", "')'", 
                                                            "'not'", "'<<'", 
                                                            "'>>'", "'&'", 
                                                            "'//'", "'%'", 
                                                            "':'", "'<='", 
                                                            "'>='", "'and'", 
                                                            "'or'", "'+'", 
                                                            "'*'", "'{'", 
                                                            "'}'", "'['", 
                                                            "']'", "'=='", 
                                                            "'..'", "'|'", 
                                                            "'^'", "'/'", 
                                                            "'...'", "'~='", 
                                                            "'!='" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "SEMI", 
                                                             "EQ", "NEW", 
                                                             "CLASS", "EXTENDS", 
                                                             "USING", "FILTER", 
                                                             "IS", "TRY", 
                                                             "CATCH", "THROW", 
                                                             "QUESTMARK", 
                                                             "COMPPLUS", 
                                                             "COMPMINUS", 
                                                             "COMPSTAR", 
                                                             "COMPSLASH", 
                                                             "COMPLL", "COMPGG", 
                                                             "COMPAMP", 
                                                             "COMPPIPE", 
                                                             "COMPCARET", 
                                                             "DEFER", "AT", 
                                                             "BREAK", "GOTO", 
                                                             "DO", "END", 
                                                             "WHILE", "REPEAT", 
                                                             "UNTIL", "IF", 
                                                             "THEN", "ELSEIF", 
                                                             "ELSE", "FOR", 
                                                             "COMMA", "IN", 
                                                             "FUNCTION", 
                                                             "LOCAL", "LT", 
                                                             "GT", "RETURN", 
                                                             "CONTINUE", 
                                                             "CC", "NIL", 
                                                             "FALSE", "TRUE", 
                                                             "DOT", "SQUIG", 
                                                             "MINUS", "POUND", 
                                                             "OP", "CP", 
                                                             "NOT", "LL", 
                                                             "GG", "AMP", 
                                                             "SS", "PER", 
                                                             "COL", "LE", 
                                                             "GE", "AND", 
                                                             "OR", "PLUS", 
                                                             "STAR", "OCU", 
                                                             "CCU", "OB", 
                                                             "CB", "EE", 
                                                             "DD", "PIPE", 
                                                             "CARET", "SLASH", 
                                                             "DDD", "SQEQ", 
                                                             "NOTEQ_ALT", 
                                                             "NAME", "NORMALSTRING", 
                                                             "CHARSTRING", 
                                                             "JENKINSHASHSTRING", 
                                                             "LONGSTRING", 
                                                             "INT", "HEX", 
                                                             "FLOAT", "HEX_FLOAT", 
                                                             "COMMENT", 
                                                             "C_COMMENT", 
                                                             "WS", "NL", 
                                                             "SHEBANG" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start_", "chunk", "block", "stat", "attnamelist", "attrib", "retstat", 
		"label", "funcname", "varlist", "namelist", "decorator", "decoratorbody", 
		"newcall", "explist", "exp", "filterfield", "filterfieldlist", "tablecomprehension", 
		"compactfunc", "indexed_member", "var", "prefixexp", "functioncall", "compound", 
		"argument", "argumentlist", "args", "functiondef", "funcbody", "class", 
		"isop", "type", "partype", "defaultvalue", "extendedpar", "extendedparlist", 
		"parlist", "tableconstructor", "fieldlist", "field", "fieldsep", "identifier", 
		"number", "string",
	];
	public get grammarFileName(): string { return "LuaParser.g4"; }
	public get literalNames(): (string | null)[] { return LuaParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return LuaParser.symbolicNames; }
	public get ruleNames(): string[] { return LuaParser.ruleNames; }
	public get serializedATN(): number[] { return LuaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, LuaParser._ATN, LuaParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public start_(): Start_Context {
		let localctx: Start_Context = new Start_Context(this, this._ctx, this.state);
		this.enterRule(localctx, 0, LuaParser.RULE_start_);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 90;
			this.chunk();
			this.state = 91;
			this.match(LuaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public chunk(): ChunkContext {
		let localctx: ChunkContext = new ChunkContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, LuaParser.RULE_chunk);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 93;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let localctx: BlockContext = new BlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, LuaParser.RULE_block);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 98;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 95;
					this.stat();
					}
					}
				}
				this.state = 100;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 102;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 24)) & ~0x1F) === 0 && ((1 << (_la - 24)) & 786433) !== 0)) {
				{
				this.state = 101;
				this.retstat();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stat(): StatContext {
		let localctx: StatContext = new StatContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, LuaParser.RULE_stat);
		let _la: number;
		try {
			this.state = 246;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 104;
				this.match(LuaParser.SEMI);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 105;
				this.varlist();
				this.state = 106;
				this.match(LuaParser.EQ);
				this.state = 107;
				this.explist();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 109;
				this.compound();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 111;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 110;
					this.match(LuaParser.NEW);
					}
					break;
				}
				this.state = 113;
				this.functioncall(0);
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 114;
				this.label();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 115;
				this.match(LuaParser.BREAK);
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 116;
				this.match(LuaParser.GOTO);
				this.state = 117;
				this.identifier();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 118;
				this.match(LuaParser.WHILE);
				this.state = 119;
				this.exp(0);
				this.state = 120;
				this.match(LuaParser.DO);
				this.state = 121;
				this.block();
				this.state = 122;
				this.match(LuaParser.END);
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 124;
				this.match(LuaParser.REPEAT);
				this.state = 125;
				this.block();
				this.state = 126;
				this.match(LuaParser.UNTIL);
				this.state = 127;
				this.exp(0);
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 129;
				this.match(LuaParser.IF);
				this.state = 130;
				this.exp(0);
				this.state = 131;
				this.match(LuaParser.THEN);
				this.state = 132;
				this.block();
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===33) {
					{
					{
					this.state = 133;
					this.match(LuaParser.ELSEIF);
					this.state = 134;
					this.exp(0);
					this.state = 135;
					this.match(LuaParser.THEN);
					this.state = 136;
					this.block();
					}
					}
					this.state = 142;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 145;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===34) {
					{
					this.state = 143;
					this.match(LuaParser.ELSE);
					this.state = 144;
					this.block();
					}
				}

				this.state = 147;
				this.match(LuaParser.END);
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 149;
				this.match(LuaParser.FOR);
				this.state = 150;
				this.identifier();
				this.state = 151;
				this.match(LuaParser.EQ);
				this.state = 152;
				this.exp(0);
				this.state = 153;
				this.match(LuaParser.COMMA);
				this.state = 154;
				this.exp(0);
				this.state = 157;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===36) {
					{
					this.state = 155;
					this.match(LuaParser.COMMA);
					this.state = 156;
					this.exp(0);
					}
				}

				this.state = 159;
				this.match(LuaParser.DO);
				this.state = 160;
				this.block();
				this.state = 161;
				this.match(LuaParser.END);
				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 163;
				this.match(LuaParser.FOR);
				this.state = 164;
				this.namelist();
				this.state = 165;
				this.match(LuaParser.IN);
				this.state = 166;
				this.explist();
				this.state = 167;
				this.match(LuaParser.DO);
				this.state = 168;
				this.block();
				this.state = 169;
				this.match(LuaParser.END);
				}
				break;
			case 13:
				this.enterOuterAlt(localctx, 13);
				{
				this.state = 171;
				this.match(LuaParser.DO);
				this.state = 172;
				this.block();
				this.state = 173;
				this.match(LuaParser.END);
				}
				break;
			case 14:
				this.enterOuterAlt(localctx, 14);
				{
				this.state = 178;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===23) {
					{
					{
					this.state = 175;
					this.decorator();
					}
					}
					this.state = 180;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 181;
				this.match(LuaParser.FUNCTION);
				this.state = 182;
				this.funcname();
				this.state = 183;
				this.funcbody();
				}
				break;
			case 15:
				this.enterOuterAlt(localctx, 15);
				{
				this.state = 188;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===23) {
					{
					{
					this.state = 185;
					this.decorator();
					}
					}
					this.state = 190;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 191;
				this.match(LuaParser.LOCAL);
				this.state = 192;
				this.match(LuaParser.FUNCTION);
				this.state = 193;
				this.identifier();
				this.state = 194;
				this.funcbody();
				}
				break;
			case 16:
				this.enterOuterAlt(localctx, 16);
				{
				this.state = 196;
				this.match(LuaParser.FILTER);
				this.state = 197;
				this.funcname();
				this.state = 202;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
				case 1:
					{
					this.state = 198;
					this.match(LuaParser.OP);
					this.state = 199;
					this.parlist();
					this.state = 200;
					this.match(LuaParser.CP);
					}
					break;
				}
				this.state = 204;
				this.filterfieldlist();
				this.state = 205;
				this.match(LuaParser.END);
				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 17);
				{
				this.state = 207;
				this.match(LuaParser.USING);
				this.state = 208;
				this.identifier();
				this.state = 214;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
				case 1:
					{
					this.state = 209;
					this.match(LuaParser.OP);
					this.state = 211;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4196344) !== 0) || ((((_la - 38)) & ~0x1F) === 0 && ((1 << (_la - 38)) & 536968065) !== 0) || ((((_la - 76)) & ~0x1F) === 0 && ((1 << (_la - 76)) & 4089) !== 0)) {
						{
						this.state = 210;
						this.explist();
						}
					}

					this.state = 213;
					this.match(LuaParser.CP);
					}
					break;
				}
				}
				break;
			case 18:
				this.enterOuterAlt(localctx, 18);
				{
				this.state = 216;
				this.match(LuaParser.LOCAL);
				this.state = 217;
				this.attnamelist();
				this.state = 220;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===2) {
					{
					this.state = 218;
					this.match(LuaParser.EQ);
					this.state = 219;
					this.explist();
					}
				}

				}
				break;
			case 19:
				this.enterOuterAlt(localctx, 19);
				{
				this.state = 222;
				this.match(LuaParser.LOCAL);
				this.state = 223;
				this.attnamelist();
				this.state = 224;
				this.match(LuaParser.IN);
				this.state = 225;
				this.prefixexp();
				}
				break;
			case 20:
				this.enterOuterAlt(localctx, 20);
				{
				this.state = 227;
				this.match(LuaParser.DEFER);
				this.state = 228;
				this.block();
				this.state = 229;
				this.match(LuaParser.END);
				}
				break;
			case 21:
				this.enterOuterAlt(localctx, 21);
				{
				this.state = 231;
				this.match(LuaParser.TRY);
				this.state = 232;
				this.block();
				this.state = 233;
				this.match(LuaParser.CATCH);
				this.state = 238;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
				case 1:
					{
					this.state = 234;
					this.identifier();
					this.state = 236;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===32) {
						{
						this.state = 235;
						this.match(LuaParser.THEN);
						}
					}

					}
					break;
				}
				this.state = 240;
				this.block();
				this.state = 241;
				this.match(LuaParser.END);
				}
				break;
			case 22:
				this.enterOuterAlt(localctx, 22);
				{
				this.state = 243;
				this.match(LuaParser.THROW);
				this.state = 244;
				this.exp(0);
				}
				break;
			case 23:
				this.enterOuterAlt(localctx, 23);
				{
				this.state = 245;
				this.class_();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attnamelist(): AttnamelistContext {
		let localctx: AttnamelistContext = new AttnamelistContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, LuaParser.RULE_attnamelist);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 248;
			this.identifier();
			this.state = 249;
			this.attrib();
			this.state = 256;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===36) {
				{
				{
				this.state = 250;
				this.match(LuaParser.COMMA);
				this.state = 251;
				this.identifier();
				this.state = 252;
				this.attrib();
				}
				}
				this.state = 258;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attrib(): AttribContext {
		let localctx: AttribContext = new AttribContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, LuaParser.RULE_attrib);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 263;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===40) {
				{
				this.state = 259;
				this.match(LuaParser.LT);
				this.state = 260;
				this.identifier();
				this.state = 261;
				this.match(LuaParser.GT);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public retstat(): RetstatContext {
		let localctx: RetstatContext = new RetstatContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, LuaParser.RULE_retstat);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 271;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 42:
				{
				this.state = 265;
				this.match(LuaParser.RETURN);
				this.state = 267;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 17, this._ctx) ) {
				case 1:
					{
					this.state = 266;
					this.explist();
					}
					break;
				}
				}
				break;
			case 24:
				{
				this.state = 269;
				this.match(LuaParser.BREAK);
				}
				break;
			case 43:
				{
				this.state = 270;
				this.match(LuaParser.CONTINUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 274;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===1) {
				{
				this.state = 273;
				this.match(LuaParser.SEMI);
				}
			}
